// Vitest Snapshot v1

exports[`options > dry run 1`] = `
"ℹ Output destination directory: \\".\\"

───┬────────────────────────────────────────────────────────
 ✔ │ File: tmp/nest/dump.txt
───┼────────────────────────────────────────────────────────
 1 │ a
 2 │ tmp/nest/dump.txt
 3 │ dump
 4 │ dump.txt
 5 │ .txt
 6 │ tmp/nest
 7 │ dump.txt
 8 │ 
 9 │ ../../snapshots/src

───┬────────────────────────────────────────────────────────
 ✔ │ File: tmp/generate.txt
───┼────────────────────────────────────────────────────────
 1 │ foo

🐶 Generated 2 files!

     ✔ tmp/nest/dump.txt
     ✔ tmp/generate.txt
"
`;

exports[`options > force overwrite 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 2 files!

     ✔ tmp/nest/dump.txt
     ✔ tmp/generate.txt
"
`;

exports[`options > not found 1`] = `
"
 ERROR  Document \\"not-found\\" not found.

"
`;

exports[`options > options 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 2 files!

     ✔ tmp/nest/dump.txt
     ✔ tmp/generate.txt
"
`;

exports[`prompt > all question types 1`] = `
"ℹ Output destination directory: \\"tmp\\"

🐶 Generated 1 file!

     ✔ tmp/result.txt
"
`;

exports[`prompt > all question types 2`] = `
"shorthand: shorthand
input: input
input_with_initial: input_with_initial
input_if: input_if
input_if_with_initial: default
input_if_without_initial: 
bool: true
bool_with_true: true
bool_with_false: false
bool_if: true
bool_if_with_initial: true
bool_if_without_initial: false
list: C
list_with_initial: B
list_if: A
list_if_with_initial: B
list_if_without_initial: 
checkbox: A,C
checkbox_with_initial: B,C
checkbox_if_with_initial: B,C
checkbox_if_without_initial: "
`;

exports[`prompt > has magic and question 1`] = `
"ℹ Output destination directory: \\"tmp/root\\"

🐶 Generated 1 file!

     ✔ tmp/root/b.txt
"
`;

exports[`prompt > name 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 2 files!

     ✔ tmp/nest/dump.txt
     ✔ tmp/generate.txt
"
`;

exports[`prompt > name 2`] = `
"a
tmp/nest/dump.txt
dump
dump.txt
.txt
tmp/nest
dump.txt

../../snapshots/src"
`;

exports[`prompt > overwrite files 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 1 file! (1 skipped)

     ✔ tmp/nest/dump.txt
     ⚠ tmp/generate.txt (skipped)
"
`;

exports[`prompt > variables section 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 1 file!

     ✔ tmp/index.txt
"
`;

exports[`prompt > variables section 2`] = `"foo: success"`;
